实现 remove_manhole_with_status 选项, 用于控制"人孔/黑洞陷阱"被移除时是否立刻使被捕获玩家脱困

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -349,4 +349,16 @@ repeat_clearunit_interval: 0
 // 此选项的最大值是 200
 dead_area_size: 28
 
+// 当"人孔/黑洞陷阱"地面陷阱被移除的时候, 是否同时使被捕获的玩家立即脱困? [开关选项]
+//
+// 在 rAthena 默认的设定中, 使用"元素领域"或"疯狂野草"等技能只能解除地面陷阱,
+// 但是无法让已经被捕获的玩家立刻脱困.
+//
+// 但是根据 2018 年 TWRO 的演示视频以及常识,
+// 在"人孔/黑洞陷阱"被解除的时候被捕获的玩家应该立刻脱困才正确.
+// 因此设立此选项, 方便大家根据自己的需求灵活调整.
+//
+// 默认值为: yes
+remove_manhole_with_status: yes
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
