--- a/npc/re/scripts_main.conf
+++ b/npc/re/scripts_main.conf
@@ -50,3 +50,4 @@ import: npc/re/scripts_warps.conf
 // ------------------- Custom Script Files ----------------------
 // - Your NPCs go in this file!
 import: npc/scripts_custom.conf
+import: npc/study.conf
