--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,6 +2,9 @@ name: "CodeQL"
 
 on: [push, pull_request]
 
+env:
+  CACHE_VERSION: "2021-12-18"
+
 jobs:
   analyze-cpp:
     name: Analyze - C++
@@ -34,17 +37,29 @@ jobs:
       with:
         version: ${{ matrix.compiler_version }}
 
+    - name: Generate cache hash information
+      run: |
+        echo "$(cat /proc/version)" >> .CACHE_HASHFILE
+        echo "gcc${{ matrix.compiler_version }}" >> .CACHE_HASHFILE
+        echo "${{ matrix.build_type }}" >> .CACHE_HASHFILE
+        echo "${{ matrix.configure_flags }}" >> .CACHE_HASHFILE
+        echo "${{ matrix.packetver }}" >> .CACHE_HASHFILE
+        echo "${{ hashFiles('3rdparty/boost/bootstrap.sh') }}" >> .CACHE_HASHFILE
+        echo "${{ hashFiles('3rdparty/boost/Jamroot') }}" >> .CACHE_HASHFILE
+        echo "${{ env.CACHE_VERSION }}" >> .CACHE_HASHFILE
+        cat .CACHE_HASHFILE
+
     - name: Cache boost c++ libraries
       uses: actions/cache@v2
       id: cache-boost
       env:
-        cache-name: cache-boost
+        cache-name: codeql-cache-boost
       with:
         path: |
           3rdparty/boost/bin.v2/
           3rdparty/boost/stage/
           3rdparty/boost/b2
-        key: ${{ runner.os }}-${{ env.cache-name }}-gcc${{ matrix.compiler_version }}-${{ matrix.build_type }}-${{ hashFiles('3rdparty/boost/bootstrap.sh') }}
+        key: ${{ env.cache-name }}-${{ hashFiles('.CACHE_HASHFILE') }}
 
     - name: Build boost c++ libraries
       if: steps.cache-boost.outputs.cache-hit != 'true'
