修正公会踢掉离线玩家后, 地图服务器需要重连角色服务器的问题 (感谢 "小纪" 反馈)

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -999,7 +999,7 @@ Body:
 - Original: "Food item %s does not exist.\n"
   Translation: ""
 - Original: "Found '[{CL_WHITE}]%d[{CL_RESET}]' guild bound item(s) from CID = [{CL_WHITE}]%d[{CL_RESET}], AID = %d, Guild ID = [{CL_WHITE}]%d[{CL_RESET}].\n"
-  Translation: ""
+  Translation: "找到 '[{CL_WHITE}]%d[{CL_RESET}]' 件公会绑定物品, 角色编号: '[{CL_WHITE}]%d[{CL_RESET}]', 账号编号: '[{CL_WHITE}]%d[{CL_RESET}]', 公会编号: '[{CL_WHITE}]%d[{CL_RESET}]'.\n"
 - Original: "Found account info for %d, requested by %d\n"
   Translation: ""
 - Original: "Found duplicate item Aegis name for %s, skipping.\n"
@@ -1779,7 +1779,7 @@ Body:
 - Original: "Request for connection of %s (ip: %s)\n"
   Translation: "账号为 %s 的玩家请求从 %s 进行连接\n"
 - Original: "Request guild bound item(s) retrieval for CID = [{CL_WHITE}]%d[{CL_RESET}], AID = %d, Guild ID = [{CL_WHITE}]%d[{CL_RESET}].\n"
-  Translation: ""
+  Translation: "请求角色服务器回收指定角色的公会绑定物品, 角色编号: '[{CL_WHITE}]%d[{CL_RESET}]', 账号编号: '[{CL_WHITE}]%d[{CL_RESET}]', 公会编号: '[{CL_WHITE}]%d[{CL_RESET}]'.\n"
 - Original: "Request with AID %d GDID %d and token %s unverified\n"
   Translation: ""
 - Original: "Request with AID %d and token %s unverified\n"
@@ -1809,7 +1809,7 @@ Body:
 - Original: "RetaliateRate %hu exceeds maximum of 10000. Capping...\n"
   Translation: ""
 - Original: "Retrieved '[{CL_WHITE}]%d[{CL_RESET}]' (failed: %d) guild bound item(s) for Guild ID = [{CL_WHITE}]%d[{CL_RESET}].\n"
-  Translation: ""
+  Translation: "已接收 '[{CL_WHITE}]%d[{CL_RESET}]' 个公会绑定道具, 接收失败: %d 个. (公会编号: '[{CL_WHITE}]%d[{CL_RESET}]').\n"
 - Original: "Reward Item %s does not exist, skipping.\n"
   Translation: ""
 - Original: "Reward Title ID %u does not exist (%hu~%hu), skipping.\n"
@@ -3847,9 +3847,9 @@ Body:
 - Original: "instance_mapid: Map ID %d does not exist.\n"
   Translation: ""
 - Original: "int_guild: Guild broken (%d)\n"
-  Translation: "int_guild: 公会已被解散 (公会编号: %d)\n"
+  Translation: "int_guild: 公会已被解散 (公会编号: '%d')\n"
 - Original: "int_guild: Guild created (%d - %s)\n"
-  Translation: "int_guild: 公会已被创建 (公会编号: %d - 公会名称: %s)\n"
+  Translation: "int_guild: 公会已被创建 (公会编号: '%d' - 公会名称: '%s')\n"
 - Original: "int_guild: GuildBasicInfoChange: Unknown type %d\n"
   Translation: ""
 - Original: "int_guild: GuildMemberChange: Not found %d,%d in guild (%d - %s)\n"
@@ -3861,7 +3861,7 @@ Body:
 - Original: "int_guild: guild with same name exists [%s]\n"
   Translation: ""
 - Original: "int_guild: guild withdraw (%d - %d: %s - %s)\n"
-  Translation: ""
+  Translation: "int_guild: 退出公会 (公会编号: '%d', 账号编号: '%d', 角色名称: '%s', 退出原因: '%s')\n"
 - Original: "int_guild: info not found %d\n"
   Translation: ""
 - Original: "int_party: Party created (%d - %s)\n"
