基于 yaml 文件重新生成 sql 脚本, 并修正一些小错误

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -847,7 +847,7 @@ Body:
 - Original: "Done converting '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已转换 [{CL_WHITE}]%-5d[{CL_RESET}] 个物品, 源于: '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done converting '[{CL_WHITE}]%d[{CL_RESET}]' mobs in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: ""
+  Translation: "已转换 [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物, 源于: '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done converting/upgrading '[{CL_WHITE}]%d[{CL_RESET}]' achievements in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: ""
 - Original: "Done converting/upgrading '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
@@ -1393,9 +1393,9 @@ Body:
 - Original: "Loading NPCs...\r"
   Translation: "正在加载脚本文件...\r"
 - Original: "Loading [%[{PRIdPTR}]/%[{PRIdPTR}]] entries from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
-  Translation: "已读取 %-5[{PRIdPTR}]%6[{PRIdPTR}]\b\b\b\b\b\b 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+  Translation: "已读取 %[{PRIdPTR}]/%[{PRIdPTR}] 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]' 数据表[{CL_CLL}]\r"
 - Original: "Loading [%[{PRIu64}]/%[{PRIu64}]] rows from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
-  Translation: "已读取 %-5[{PRIu64}]%6[{PRIu64}]\b\b\b\b\b\b 行数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+  Translation: "已读取 %[{PRIu64}]/%[{PRIu64}] 行数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]' 数据表[{CL_CLL}]\r"
 - Original: "Loading [{CL_WHITE}]%s[{CL_RESET}] from blast cache...[{CL_CLL}]\r"
   Translation: "正在加载 [{CL_WHITE}]%s[{CL_RESET}] 数据库的疾风缓存...[{CL_CLL}]\r"
 - Original: "Loading maps (using %s as map cache)...\n"
