--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -847,7 +847,7 @@ Body:
 - Original: "Done converting '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已轉換 [{CL_WHITE}]%-5d[{CL_RESET}] 個物品, 源於: '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done converting '[{CL_WHITE}]%d[{CL_RESET}]' mobs in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: ""
+  Translation: "已轉換 [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物, 源於: '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done converting/upgrading '[{CL_WHITE}]%d[{CL_RESET}]' achievements in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: ""
 - Original: "Done converting/upgrading '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
@@ -1393,9 +1393,9 @@ Body:
 - Original: "Loading NPCs...\r"
   Translation: "正在載入指令碼檔案...\r"
 - Original: "Loading [%[{PRIdPTR}]/%[{PRIdPTR}]] entries from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
-  Translation: "已讀取 %-5[{PRIdPTR}]%6[{PRIdPTR}]\b\b\b\b\b\b 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+  Translation: "已讀取 %[{PRIdPTR}]/%[{PRIdPTR}] 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]' 資料表[{CL_CLL}]\r"
 - Original: "Loading [%[{PRIu64}]/%[{PRIu64}]] rows from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
-  Translation: "已讀取 %-5[{PRIu64}]%6[{PRIu64}]\b\b\b\b\b\b 行資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+  Translation: "已讀取 %[{PRIu64}]/%[{PRIu64}] 行資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]' 資料表[{CL_CLL}]\r"
 - Original: "Loading [{CL_WHITE}]%s[{CL_RESET}] from blast cache...[{CL_CLL}]\r"
   Translation: "正在載入 [{CL_WHITE}]%s[{CL_RESET}] 資料庫的疾風快取...[{CL_CLL}]\r"
 - Original: "Loading maps (using %s as map cache)...\n"
