跟随 bfcfd39 修正编译辅助脚本无法正确识别可用编译器的问题

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -1393,9 +1393,9 @@ Body:
 - Original: "Loading NPCs...\r"
   Translation: "正在加载脚本文件...\r"
 - Original: "Loading [%[{PRIdPTR}]/%[{PRIdPTR}]] entries from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
-  Translation: "已读取 %[{PRIdPTR}]/%[{PRIdPTR}] 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]' 数据表[{CL_CLL}]\r"
+  Translation: "已读取 %[{PRIdPTR}]/%[{PRIdPTR}] 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "Loading [%[{PRIu64}]/%[{PRIu64}]] rows from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
-  Translation: "已读取 %[{PRIu64}]/%[{PRIu64}] 行数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]' 数据表[{CL_CLL}]\r"
+  Translation: "已读取 %[{PRIu64}]/%[{PRIu64}] 行数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "Loading [{CL_WHITE}]%s[{CL_RESET}] from blast cache...[{CL_CLL}]\r"
   Translation: "正在加载 [{CL_WHITE}]%s[{CL_RESET}] 数据库的疾风缓存...[{CL_CLL}]\r"
 - Original: "Loading maps (using %s as map cache)...\n"
