--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -1393,9 +1393,9 @@ Body:
 - Original: "Loading NPCs...\r"
   Translation: "正在載入指令碼檔案...\r"
 - Original: "Loading [%[{PRIdPTR}]/%[{PRIdPTR}]] entries from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
-  Translation: "已讀取 %[{PRIdPTR}]/%[{PRIdPTR}] 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]' 資料表[{CL_CLL}]\r"
+  Translation: "已讀取 %[{PRIdPTR}]/%[{PRIdPTR}] 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "Loading [%[{PRIu64}]/%[{PRIu64}]] rows from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
-  Translation: "已讀取 %[{PRIu64}]/%[{PRIu64}] 行資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]' 資料表[{CL_CLL}]\r"
+  Translation: "已讀取 %[{PRIu64}]/%[{PRIu64}] 行資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "Loading [{CL_WHITE}]%s[{CL_RESET}] from blast cache...[{CL_CLL}]\r"
   Translation: "正在載入 [{CL_WHITE}]%s[{CL_RESET}] 資料庫的疾風快取...[{CL_CLL}]\r"
 - Original: "Loading maps (using %s as map cache)...\n"
