提前合并 rAthena 第 6431 号推送请求的修改

--- a/src/char/char-server.vcxproj
+++ b/src/char/char-server.vcxproj
@@ -199,6 +199,7 @@
     <ClInclude Include="int_quest.hpp" />
     <ClInclude Include="int_storage.hpp" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="packets.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="char.cpp" />
