增加疾风缓存对于结构体长度的匹配校验, 防止未来出现同类错误

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -494,6 +494,8 @@ Body:
   Translation: ""
 - Original: "Blacksmith Blessing amount %hu too high, capping to MAX_AMOUNT.\n"
   Translation: ""
+- Original: "Blast Cache: Struct size of database '%s' does not meet expectations, current size is: %d\n"
+  Translation: "疾風快取: %s 的結構體大小不符合預期 (%d 位元組). 此資料庫的快取將臨時關閉, 請聯絡開發人員確認.\n"
 - Original: "Body is:\n%s\n"
   Translation: "出站響應內容 (Response Body):\n%s\n"
 - Original: "Bonus Script loaded for CID=%d. Total: %d.\n"
@@ -1134,7 +1136,7 @@ Body:
   Translation: ""
 - Original: "Invalid Group %s for achievement %d, skipping.\n"
   Translation: ""
-- Original: "Invalid Id %d (valid range: %d-%d).\n"
+- Original: "Invalid Id %d (valid ranges: %d-%d and %d-%d).\n"
   Translation: ""
 - Original: "Invalid Magic Mushroom skill name \"%s\", skipping.\n"
   Translation: ""
@@ -1604,7 +1606,11 @@ Body:
   Translation: ""
 - Original: "Missing required node \"ItemRequirements\".\n"
   Translation: ""
-- Original: "Missing status points for Level %d\n"
+- Original: "Missing status points for Level %hu\n"
+  Translation: ""
+- Original: "Missing status points for Level 1\n"
+  Translation: ""
+- Original: "Missing trait points for Level %hu\n"
   Translation: ""
 - Original: "Missing value for option '%s'.\n"
   Translation: ""
@@ -2012,7 +2018,7 @@ Body:
   Translation: ""
 - Original: "Starting server...\n"
   Translation: "正在啟動伺服器...\n"
-- Original: "Status points for Level 1 (=%d) do not match inter_athena.conf value (=%d).\n"
+- Original: "Status points for Level 1 (=%u) do not match inter_athena.conf value (=%u).\n"
   Translation: ""
 - Original: "Storage %d has been saved (AID: %d).\n"
   Translation: ""
@@ -2886,6 +2892,8 @@ Body:
   Translation: ""
 - Original: "buildin_geteleminfo: Player doesn't have Elemental.\n"
   Translation: ""
+- Original: "buildin_getenchantgrade: Unknown equip index '%d'\n"
+  Translation: ""
 - Original: "buildin_getequiparmorlv: unsupported equip index %d.\n"
   Translation: ""
 - Original: "buildin_getequipid: Unknown equip index '%d'\n"
@@ -3214,6 +3222,8 @@ Body:
   Translation: ""
 - Original: "buildin_montransform: Unsupported status change id %d\n"
   Translation: ""
+- Original: "buildin_needed_trait_point: Unknown trait type %d\n"
+  Translation: ""
 - Original: "buildin_next: There is no mes active.\n"
   Translation: ""
 - Original: "buildin_npcshopupdate: Attempt to update empty shop from '%s'.\n"
@@ -3482,6 +3492,10 @@ Body:
   Translation: ""
 - Original: "buildin_summon: Attempted to summon non-existing monster class %d\n"
   Translation: ""
+- Original: "buildin_traitstatusup2: Unknown trait type %d\n"
+  Translation: ""
+- Original: "buildin_traitstatusup: Unknown trait type %d\n"
+  Translation: ""
 - Original: "buildin_unequip: No item equipped at pos %d (CID=%d/AID=%d).\n"
   Translation: ""
 - Original: "buildin_unequipidx: Index (%d) should be from 0-%d.\n"
@@ -3665,6 +3679,8 @@ Body:
 - Original: "clif_parse_inventoryExpansionConfirmed: event '%s' not found, operation failed.\n"
   Translation: ""
 - Original: "clif_parse_inventoryExpansionRejected: event '%s' not found, operation failed.\n"
+  Translation: ""
+- Original: "clif_parse_traitstatus_up: Negative 'increase' value sent by client! %s (AID: %d, CID: %d, value: %d)\n"
   Translation: ""
 - Original: "clif_party_message: Truncated message '%s' (len=%d, max=%[{PRIuPTR}], party_id=%d).\n"
   Translation: ""
