调整 Github Actions 的触发范围

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -2,6 +2,7 @@ name: Build And Test
 
 on:
   push:
+    branches: [master, develop]
     paths-ignore:
       - '**/*.md'
       - '**/*.gitignore'
@@ -9,6 +10,7 @@ on:
       - 'doc/**'
       - 'tools/python/**'
   pull_request:
+    branches: [master, develop]
     paths-ignore:
       - '**/*.md'
       - '**/*.gitignore'
