--- a/src/login/login-server.vcxproj
+++ b/src/login/login-server.vcxproj
@@ -229,8 +229,13 @@
     <Delete Files="$(SolutionDir)runserver.bat" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)login-server.lib" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)login-server.exp" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)login-server.pdb" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)login-server.map" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)login-server-pre.lib" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)login-server-pre.exp" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)login-server-pre.exe" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)login-server-pre.pdb" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)login-server-pre.map" ContinueOnError="true" />
   </Target>
   <Target Name="AfterBuild">
     <Copy SourceFiles="$(SolutionDir)3rdparty\mysql\lib\$(Platform)\libmysql.dll" DestinationFolder="$(SolutionDir)" ContinueOnError="true" Condition="!Exists('$(SolutionDir)libmysql.dll')" />
