--- a/src/map/map-server.vcxproj
+++ b/src/map/map-server.vcxproj
@@ -332,8 +332,13 @@
     <Delete Files="$(SolutionDir)runserver.bat" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)map-server.lib" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)map-server.exp" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)map-server.pdb" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)map-server.map" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)map-server-pre.lib" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)map-server-pre.exp" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)map-server-pre.exe" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)map-server-pre.pdb" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)map-server-pre.map" ContinueOnError="true" />
   </Target>
   <Target Name="AfterBuild">
     <Copy SourceFiles="$(SolutionDir)3rdparty\mysql\lib\$(Platform)\libmysql.dll" DestinationFolder="$(SolutionDir)" ContinueOnError="true" Condition="!Exists('$(SolutionDir)libmysql.dll')" />
