更新版本号展现样式, 使之支持显示专业版版本号

--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1889,14 +1889,15 @@
 3084: You cannot enter afk mode on this map.
 
 // @version
-3085: Pandas Version: %s (%s)
+3085: Pandas Community: %s (%s)
 3086: Official Compilation
 3087: Unofficial Compilation
 3088: Server Mode: %s | PACKETVER: %d | Git Branch: %s | Git Hash: %s
 3089: Pre-Renewal
 3090: Renewal
 3091: Null
-//3092-3094: FREE
+3092: Pandas Pro: %s (Build on community version %s | %s)
+//3093-3094: FREE
 
 // Mapflag - nomail
 3095: Mailbox or RODEX is prohibited on this map!
