--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -1828,14 +1828,15 @@
 3084: 此地图禁止进入离开模式, 请离开此地图后重试.
 
 // @version
-3085: 熊猫模拟器版本: %s (%s)
+3085: 熊猫模拟器社区版: %s (%s)
 3086: 官方编译
-3087: 个人 / 非官方编译
+3087: 个人或非官方编译
 3088: 运行模式: %s | 适配的客户端版本: %d | 分支: %s | 提交散列: %s
 3089: 复兴前
 3090: 复兴后
 3091: 暂无数据
-//3092-3094: 闲置
+3092: 熊猫模拟器专业版: %s (基于社区版 %s 构建 | %s)
+//3093-3094: 闲置
 
 // 地图标记 - nomail
 3095: 此地图禁止使用邮箱及其相关功能, 请离开此地图后重试.
