--- a/conf/msg_conf/map_msg_cht.conf
+++ b/conf/msg_conf/map_msg_cht.conf
@@ -1828,14 +1828,15 @@
 3084: 此地圖禁止進入離開模式, 請離開此地圖後重試.
 
 // @version
-3085: 熊貓模擬器版本: %s (%s)
+3085: 熊貓模擬器社區版: %s (%s)
 3086: 官方編譯
-3087: 個人 / 非官方編譯
+3087: 個人或非官方編譯
 3088: 運行模式: %s | 適配的客戶端版本: %d | 分支: %s | 提交散列: %s
 3089: 復興前
 3090: 復興後
 3091: 暫無數據
-//3092-3094: 閒置
+3092: 熊貓模擬器專業版: %s (基於社區版 %s 構建 | %s)
+//3093-3094: 閒置
 
 // 地圖標記 - nomail
 3095: 此地圖禁止使用郵箱及其相關功能, 請離開此地圖後重試.
