--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -680,6 +680,8 @@ Body:
   Translation: ""
 - Original: "Command %s does not exist.\n"
   Translation: ""
+- Original: "Compile for Client PACKETVER: [{CL_WHITE}]%d[{CL_RESET}] | Mode: %s | %s\n"
+  Translation: "适配的客户端封包协议版本为: [{CL_WHITE}]%d[{CL_RESET}] | 工作模式: %s | 编译模式: %s\n"
 - Original: "Compiled from Git Hash: [{CL_WHITE}]'%s'[{CL_RESET}] at [{CL_WHITE}]'%s'[{CL_RESET}] branch.\n"
   Translation: "编译此程序的代码版本为: [{CL_WHITE}]'%s'[{CL_RESET}] | 代码分支: [{CL_WHITE}]'%s'[{CL_RESET}].\n"
 - Original: "Configuration file (%s) not found.\n"
@@ -1748,8 +1750,6 @@ Body:
   Translation: ""
 - Original: "Packet debug of 0x%04X (length %d), session #%d\n"
   Translation: ""
-- Original: "Pandas Version: [{CL_WHITE}]%s[{CL_RESET}] (Mode: %s)\n"
-  Translation: "当前版本: [{CL_WHITE}]%s[{CL_RESET}] (工作模式: %s)\n"
 - Original: "Party Saved (%d - %s)\n"
   Translation: "已保存队伍信息 (队伍编号: %d - 队伍名称: %s).\n"
 - Original: "Party loaded (%d - %s).\n"
@@ -2324,6 +2324,10 @@ Body:
   Translation: "WEB 接口服务器未启动, 正在停止.\n"
 - Original: "Web server not running, sleeping 1 second.\n"
   Translation: "当前 WEB 接口服务器还未进入就绪状态, 将在 1 秒钟后重试...\n"
+- Original: "Welcome to Pandas Community: [{CL_GREEN}]%S[{CL_RESET}]\n"
+  Translation: "欢迎使用熊猫模拟器社区版: [{CL_GREEN}]%S[{CL_RESET}]\n"
+- Original: "Welcome to Pandas Pro: [{CL_GREEN}]%s[{CL_RESET}] (Build on community version %s)\n"
+  Translation: "欢迎使用熊猫模拟器专业版: [{CL_GREEN}]%s[{CL_RESET}] (基于社区版 %s 构建)\n"
 - Original: "Whips are always female-only, defaulting to SEX_FEMALE.\n"
   Translation: "鞭子只能给女性角色使用, 强制将其性别限制调整为 SEX_FEMALE.\n"
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
@@ -5534,5 +5538,3 @@ Body:
   Translation: ""
 - Original: "wrong egg item inventory %d\n"
   Translation: ""
-- Original: "itemdb_read_combos: line %d of \"%s\" contains unknown item ID %[{PRIu32}], skipping.\n"
-  Translation: "itemdb_read_combos: 第 %d 行 (\"%s\") 包含未知的物品编号 %[{PRIu32}], 已跳过.\n"
