修正一些错误

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -2324,10 +2324,10 @@ Body:
   Translation: "WEB 接口服务器未启动, 正在停止.\n"
 - Original: "Web server not running, sleeping 1 second.\n"
   Translation: "当前 WEB 接口服务器还未进入就绪状态, 将在 1 秒钟后重试...\n"
-- Original: "Welcome to Pandas Community: [{CL_GREEN}]%S[{CL_RESET}]\n"
-  Translation: "欢迎使用熊猫模拟器社区版: [{CL_GREEN}]%S[{CL_RESET}]\n"
+- Original: "Welcome to Pandas Community: [{CL_GREEN}]%s[{CL_RESET}]\n"
+  Translation: "熊猫模拟器社区版: [{CL_GREEN}]%s[{CL_RESET}]\n"
 - Original: "Welcome to Pandas Pro: [{CL_GREEN}]%s[{CL_RESET}] (Build on community version %s)\n"
-  Translation: "欢迎使用熊猫模拟器专业版: [{CL_GREEN}]%s[{CL_RESET}] (基于社区版 %s 构建)\n"
+  Translation: "熊猫模拟器专业版: [{CL_GREEN}]%s[{CL_RESET}] (基于社区版 %s 构建)\n"
 - Original: "Whips are always female-only, defaulting to SEX_FEMALE.\n"
   Translation: "鞭子只能给女性角色使用, 强制将其性别限制调整为 SEX_FEMALE.\n"
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
