--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -2324,10 +2324,10 @@ Body:
   Translation: "WEB 介面伺服器未啟動, 正在停止.\n"
 - Original: "Web server not running, sleeping 1 second.\n"
   Translation: "當前 WEB 介面伺服器還未進入就緒狀態, 將在 1 秒鐘後重試...\n"
-- Original: "Welcome to Pandas Community: [{CL_GREEN}]%S[{CL_RESET}]\n"
-  Translation: "歡迎使用熊貓模擬器社群版: [{CL_GREEN}]%S[{CL_RESET}]\n"
+- Original: "Welcome to Pandas Community: [{CL_GREEN}]%s[{CL_RESET}]\n"
+  Translation: "熊貓模擬器社群版: [{CL_GREEN}]%s[{CL_RESET}]\n"
 - Original: "Welcome to Pandas Pro: [{CL_GREEN}]%s[{CL_RESET}] (Build on community version %s)\n"
-  Translation: "歡迎使用熊貓模擬器專業版: [{CL_GREEN}]%s[{CL_RESET}] (基於社群版 %s 構建)\n"
+  Translation: "熊貓模擬器專業版: [{CL_GREEN}]%s[{CL_RESET}] (基於社群版 %s 構建)\n"
 - Original: "Whips are always female-only, defaulting to SEX_FEMALE.\n"
   Translation: "鞭子只能給女性角色使用, 強制將其性別限制調整為 SEX_FEMALE.\n"
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
