更新版本号的呈现样式, 使之能显示专业版的版本号 (#493)

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -680,6 +680,8 @@ Body:
   Translation: ""
 - Original: "Command %s does not exist.\n"
   Translation: ""
+- Original: "Compile for Client PACKETVER: [{CL_WHITE}]%d[{CL_RESET}] | Mode: %s | %s\n"
+  Translation: "適配的客戶端封包協議版本為: [{CL_WHITE}]%d[{CL_RESET}] | 工作模式: %s | 編譯模式: %s\n"
 - Original: "Compiled from Git Hash: [{CL_WHITE}]'%s'[{CL_RESET}] at [{CL_WHITE}]'%s'[{CL_RESET}] branch.\n"
   Translation: "編譯此程式的程式碼版本為: [{CL_WHITE}]'%s'[{CL_RESET}] | 程式碼分支: [{CL_WHITE}]'%s'[{CL_RESET}].\n"
 - Original: "Configuration file (%s) not found.\n"
@@ -1748,8 +1750,6 @@ Body:
   Translation: ""
 - Original: "Packet debug of 0x%04X (length %d), session #%d\n"
   Translation: ""
-- Original: "Pandas Version: [{CL_WHITE}]%s[{CL_RESET}] (Mode: %s)\n"
-  Translation: "當前版本: [{CL_WHITE}]%s[{CL_RESET}] (工作模式: %s)\n"
 - Original: "Party Saved (%d - %s)\n"
   Translation: "已儲存隊伍資訊 (隊伍編號: %d - 隊伍名稱: %s).\n"
 - Original: "Party loaded (%d - %s).\n"
@@ -2324,6 +2324,10 @@ Body:
   Translation: "WEB 介面伺服器未啟動, 正在停止.\n"
 - Original: "Web server not running, sleeping 1 second.\n"
   Translation: "當前 WEB 介面伺服器還未進入就緒狀態, 將在 1 秒鐘後重試...\n"
+- Original: "Welcome to Pandas Community: [{CL_GREEN}]%s[{CL_RESET}]\n"
+  Translation: "熊貓模擬器社群版: [{CL_GREEN}]%s[{CL_RESET}]\n"
+- Original: "Welcome to Pandas Pro: [{CL_GREEN}]%s[{CL_RESET}] (Build on community version %s)\n"
+  Translation: "熊貓模擬器專業版: [{CL_GREEN}]%s[{CL_RESET}] (基於社群版 %s 構建)\n"
 - Original: "Whips are always female-only, defaulting to SEX_FEMALE.\n"
   Translation: "鞭子只能給女性角色使用, 強制將其性別限制調整為 SEX_FEMALE.\n"
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
@@ -5534,5 +5538,3 @@ Body:
   Translation: ""
 - Original: "wrong egg item inventory %d\n"
   Translation: ""
-- Original: "itemdb_read_combos: line %d of \"%s\" contains unknown item ID %[{PRIu32}], skipping.\n"
-  Translation: "itemdb_read_combos: 第 %d 行 (\"%s\") 包含未知的物品編號 %[{PRIu32}], 已跳過.\n"
