--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -36,6 +36,7 @@ jobs:
 
     - name: Preparing dependencies
       run: |
+        ./tools/integration/retry.sh sudo apt-get update -y
         ./tools/integration/retry.sh sudo apt-get install libmysqlclient-dev zlib1g-dev libpcre3-dev -y
 
     - name: Setup gcc compiler
