实现 query_sql_async 和 query_logsql_async 异步数据库查询脚本指令 (感谢 "inhyositsu" 实现) (#496)
Co-authored-by: inhyositsu <inhyositsu@gmail.com>

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -212,6 +212,8 @@ if( WITH_ZLIB )
 		"${COMMON_SOURCE_DIR}/msg_conf.hpp"
 		"${COMMON_SOURCE_DIR}/cli.hpp"
 		"${COMMON_SOURCE_DIR}/utilities.hpp"
+		"${COMMON_SOURCE_DIR}/future.hpp"
+		"${COMMON_SOURCE_DIR}/jobqueue.hpp"
 		"${COMMON_SOURCE_DIR}/assistant.hpp"
 		"${COMMON_SOURCE_DIR}/utf8.hpp"
 		"${COMMON_SOURCE_DIR}/crashdump.hpp"
@@ -248,6 +250,7 @@ if( WITH_ZLIB )
 		"${COMMON_SOURCE_DIR}/msg_conf.cpp"
 		"${COMMON_SOURCE_DIR}/cli.cpp"
 		"${COMMON_SOURCE_DIR}/utilities.cpp"
+		"${COMMON_SOURCE_DIR}/future.cpp"
 		"${COMMON_SOURCE_DIR}/assistant.cpp"
 		"${COMMON_SOURCE_DIR}/utf8.cpp"
 		"${COMMON_SOURCE_DIR}/crashdump.cpp"
