--- a/src/common/common.vcxproj.filters
+++ b/src/common/common.vcxproj.filters
@@ -83,6 +83,12 @@
     <ClInclude Include="utilities.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="jobqueue.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="future.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="assistant.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -176,6 +182,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="utilities.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="future.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="winapi.cpp">
